--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                     <ul class="infoabout__list">
                                         <li>
                                             <div class="infoabout__wrap">
-                                                <span class="mt-4 mb-2 d-block infoabout__title">FULL NAME</span>
+                                                <span class="mt-4 mb-2 d-block infoabout__title">NOMBRE COMPLETO</span>
                                                 <p>
                                                     Carlos Alberto Sanchez Castillo
                                                 </p>
@@ -139,7 +139,7 @@
                                         </li>
                                         <li>
                                             <div class="infoabout__wrap">
-                                                <span class="mt-4 mb-2 d-block infoabout__title">EMAIL ADDRESS</span>
+                                                <span class="mt-4 mb-2 d-block infoabout__title">CORREO</span>
                                                 <p>
                                                     Carlosgeek503@gmail.com
                                                 </p>
@@ -147,9 +147,9 @@
                                         </li>
                                         <li>
                                             <div class="infoabout__wrap">
-                                                <span class="mt-4 mb-2 d-block infoabout__title">PHONE NUMBER</span>
+                                                <span class="mt-4 mb-2 d-block infoabout__title">TELEFONO</span>
                                                 <p>
-                                                    +503 60004068
+                                                    +503 71680706
                                                 </p>
                                             </div>
                                         </li>
