--- a/index.html
+++ b/index.html
@@ -157,7 +157,9 @@
                                 </div>
                               <br><br>
                                 <a href="#" class="">
+                                    <center>
                                    Descargar curriculum vitae
+                                   </center>
                                 </a>
                             </div>
                         </div>
